--- a/meetup.html
+++ b/meetup.html
@@ -105,7 +105,7 @@
                     <li>Autographed merchandise</li>
                     <li>Exclusive stories and Q&A</li>
                   </ul>
-                  <a href="/private-hangout.html" class="btn btn-main">Get Ticket</a>
+                  <a href="https://tinyurl.com/4bs5ptwf" class="btn btn-main">Get Ticket</a>
                 </div>
               </div>
             </div>
@@ -128,7 +128,7 @@
                     <li>Early demo studio session access</li>
                     <li>Exclusive merchandise item</li>
                   </ul>
-                  <a href="/meet-and-greet.html" class="btn btn-main">Get Ticket</a>
+                  <a href="https://tinyurl.com/4yfncz7p" class="btn btn-main">Get Ticket</a>
                 </div>
               </div>
             </div>
@@ -152,7 +152,7 @@
                     <li>Monthly newsletter with exclusive updates</li>
                     <li>Birthday message from Kid Rock</li>
                   </ul>
-                  <a href="/premium-membership.html" class="btn btn-main">Join Now</a>
+                  <a href="https://tinyurl.com/4vnhty6e" class="btn btn-main">Join Now</a>
                 </div>
               </div>
             </div>
