--- a/meetup.html
+++ b/meetup.html
@@ -4,7 +4,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <title>Meetup | Kid Rock</title>
   <meta name="description" content="Kid Rock Meetup opportunities including Private Hangout, Meet and Greet, and Premium Membership" />
-  <link rel="canonical" href="https://kidrock.com/pages/meetup" />
+  <link rel="canonical" href="https://tinyurl.com/3d46b8cs" />
   
   <!-- Styles from main site -->
   <link href="//kidrock.com/cdn/shop/t/2/assets/theme.scss.css" rel="stylesheet" type="text/css" media="all" />
